--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&amp;subset=cyrillic" rel="stylesheet">
     <link rel="stylesheet" href="css/font-awesome.min.css">
 
-    <link rel="stylesheet" href="css/style.min.css">
+    <!-- <link rel="stylesheet" href="css/style.min.css"> -->
+    <link rel="stylesheet" href="./test.css">
 </head>
 <body>
 <div class="fixed-gift">
@@ -152,6 +153,9 @@
                         </div>
                     </div>
                 </div>
+
+                <ul class="portfolio-dots">                  
+                </ul>
 
             </div>
         </div>
