--- a/schelkovo.html
+++ b/schelkovo.html
@@ -7,7 +7,8 @@
     <title>Сеть фитнес клубов Тело - Мозаика</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&amp;subset=cyrillic" rel="stylesheet">
     <link rel="stylesheet" href="css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/style.min.css">
+    <!-- <link rel="stylesheet" href="css/style.min.css"> -->
+    <link rel="stylesheet" href="./test.css">
     <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
 </head>
 <body>
@@ -149,6 +150,8 @@
                     </div>
                 </div>
 
+                <ul class="portfolio-dots">                  
+                </ul>
             </div>
         </div>
     </div>
