--- a/index.html
+++ b/index.html
@@ -335,9 +335,10 @@
                     </label>
                     </div>
                     <div class="price">
-                        <div class="price-message input-text"><input name="name" type="text" required
+                        <div class="price-message input-text"><input id="promo" name="name" type="text" required
                                                                      placeholder="Промокод"></div>
                         <div class="price-message">Цена:</div>
+                        <!-- <div class="price-message" id="price-total">0</div> -->
                         <div class="price-message" id="price-total">2999</div>
                     </div>
                     <input type="hidden" name="form_name" value="Заказать карту">
