--- a/schelkovo.html
+++ b/schelkovo.html
@@ -351,21 +351,24 @@
     <div class="gallery-bg">
         <div class="wrapper">
             <div class="gallery-slider">
-                <div class="slide">
+                <div class="slide gallery-slide gallery-slide_active">
                     <img src="images/gallery/photo1.jpg" alt="">
                 </div>
-                <div class="slide">
+                <div class="slide gallery-slide">
                     <img src="images/gallery/photo2.jpg" alt="">
                 </div>
-                <div class="slide">
+                <div class="slide gallery-slide">
                     <img src="images/gallery/photo3.jpg" alt="">
                 </div>
-                <div class="slide">
+                <div class="slide gallery-slide">
                     <img src="images/gallery/photo4.jpg" alt="">
                 </div>
-                <div class="slide">
+                <div class="slide gallery-slide">
                     <img src="images/gallery/photo5.jpg" alt="">
                 </div>
+
+                <ul class="photogallery-dots">                  
+                </ul>
             </div>
         </div>
     </div>
