--- a/index.html
+++ b/index.html
@@ -222,6 +222,7 @@
 <section id="services">
     <div class="wrapper">
         <h2>услуги наших клубов</h2>
+        <div class="services-wrapper">
         <div class="services-slider">
             <div class="slide">
                 <img src="images/services-slider/akva.jpg" alt="Аква территория">
@@ -274,6 +275,7 @@
                 <p>Йога - идеальны не только физическая форма, но и эмоциональное состояние</p>
             </div>
         </div>
+      </div>
     </div>
 </section>
 <section id="gallery">
