--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="css/font-awesome.min.css">
 
   <!-- <link rel="stylesheet" href="css/style.min.css"> -->
-  <link rel="stylesheet" href="./test.css">
+  <link rel="stylesheet" href="./css/test.css">
 </head>
 
 <body>
@@ -217,7 +217,7 @@
           <input type="tel" name="phone" id="phone" required placeholder="Ваш номер телефона...">
           <button name="send" class="btn" type="submit">Записаться</button>
           <p class="personal-data">
-            <input type="checkbox" required id="check1"><label for="check1">Я согласен на обработку персональных
+            <input type="checkbox"  id="check1"><label for="check1">Я согласен на обработку персональных
               данных</label>
           </p>
         </form>
@@ -347,7 +347,7 @@
               </label>
             </div>
             <div class="price">
-              <div class="price-message input-text"><input id="promo" name="name" type="text" required
+              <div class="price-message input-text"><input id="promo" name="name" type="text" 
                   placeholder="Промокод"></div>
               <div class="price-message">Цена:</div>
               <!-- <div class="price-message" id="price-total">0</div> -->
@@ -358,7 +358,7 @@
             <p class="input-text"><input type="tel" name="phone" id="callback_form-phone" required
                 placeholder="Ваш номер телефона..."></p>
             <p class="personal-data">
-              <input type="checkbox" required id="card_check"><label for="card_check">Я согласен на обработку
+              <input type="checkbox"  id="card_check"><label for="card_check">Я согласен на обработку
                 персональных данных</label>
             </p>
             <p class="submit">
@@ -369,6 +369,7 @@
       </div>
     </div>
   </section>
+
   <footer id="footer">
     <div class="wrapper">
       <div class="footer-top">
@@ -392,6 +393,7 @@
           </div>
         </div>
         <div class="right">
+
           <form action="" id="footer_form">
             <div class="content">
               <div class="choose-club">
@@ -422,6 +424,7 @@
               </div>
             </div>
           </form>
+          
         </div>
       </div>
       <div class="footer-bottom">
@@ -448,8 +451,8 @@
         </div>
       </div>
     </div>
-
   </footer>
+
   <div class="wrapper">
     <a href="#" id="totop"><i class="fa fa-arrow-up" aria-hidden="true"></i>
     </a>
@@ -462,6 +465,7 @@
         <img src="images/close-icon.png" alt="close" class="close_icon">
       </div>
       <div class="form-content">
+
         <form name="callback-form" id="form1" action="#" method="post">
           <h4>Обратный звонок</h4>
           <input type="hidden" name="form_name" value=" Обратный звонок">
@@ -470,9 +474,8 @@
           <p class="input-text"><input type="tel" name="phone" id="callback_form1-phone" required
               placeholder="Ваш номер телефона..."></p>
           <p class="personal-data">
-            <input type="checkbox" required id="check"><label for="check">Я согласен на обработку <br>персональных
+            <input type="checkbox"  id="check"><label for="check">Я согласен на обработку <br>персональных
               данных</label>
-
           </p>
           <button name="send1" class="btn btn-send" type="submit">Перезвоните мне</button>
         </form>
@@ -495,7 +498,7 @@
           <p class="input-text"><input type="tel" name="phone" id="callback_form2-phone" required
               placeholder="Ваш номер телефона..."></p>
           <p class="personal-data">
-            <input type="checkbox" required id="check2"><label for="check2">Я согласен на обработку <br>персональных
+            <input type="checkbox"  id="check2"><label for="check2">Я согласен на обработку <br>персональных
               данных</label>
 
           </p>
