--- a/mozaika.html
+++ b/mozaika.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="css/font-awesome.min.css">
 
   <!-- <link rel="stylesheet" href="css/style.min.css"> -->
-  <link rel="stylesheet" href="./test.css">
+  <link rel="stylesheet" href="./css/test.css">
   <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
 </head>
 
@@ -419,7 +419,7 @@
           <input type="tel" name="phone" id="phone" required placeholder="Ваш номер телефона...">
           <button name="send" class="btn" type="submit">Записаться</button>
           <p class="personal-data">
-            <input type="checkbox" required id="check1"><label for="check1">Я согласен на обработку персональных
+            <input type="checkbox"  id="check1"><label for="check1">Я согласен на обработку персональных
               данных</label>
           </p>
         </form>
@@ -462,14 +462,14 @@
               <div class="choose-club">
                 <h5>Выбрать клуб</h5>
                 <div class="club">
-                  <input type="radio" id="footer_leto_mozaika" name="club-name" value="mozaika"><label
+                  <input type="radio" checked id="footer_leto_mozaika" name="club-name" value="mozaika"><label
                     for="footer_leto_mozaika">
                     <h6>Тело «Мозаика»</h6>
                     <p>Россия, Москва, 7-я Кожуховская ул.,&nbsp;9</p>
                   </label>
                 </div>
                 <div class="club">
-                  <input type="radio" id="footer_leto_schelkovo" name="club-name" value="schelkovo"><label
+                  <input type="radio"  id="footer_leto_schelkovo" name="club-name" value="schelkovo"><label
                     for="footer_leto_schelkovo">
                     <h6>Тело «Щелково»</h6>
                     <p>Россия, г. Щелково, ул. Советская, д.&nbsp;16</p>
