--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
               </label>
             </div>
             <div class="price">
-              <div class="price-message input-text"><input id="promo" name="name" type="text" 
+              <div class="price-message input-text"><input id="promo" name="promo-name" type="text" 
                   placeholder="Промокод"></div>
               <div class="price-message">Цена:</div>
               <!-- <div class="price-message" id="price-total">0</div> -->
@@ -536,7 +536,6 @@
     </div>
 
   </div>
-
 
   <script defer src="./dist/main.js"></script>
 </body>
